# Odyssey

./: CMakeLists.txt  LICENSE  README.md  windows_build_cmake.bat
containers/: vector.h
data/shaders/: compile_shaders.bat  shader.frag
filesystem/: file.h  file_common.h  win32_file.h
math/: odyssey_math.h  vec2.h  vec3.h
src/: odyssey.h  win32_odyssey.cpp  win32_odyssey.h
vulkan/: vk_debug_utils.h  vk_loader.h  vk_memory.h  vk_odyssey.cpp  vk_odyssey.h  vk_physical_device.h  vk_pipeline.h  vk_render_pass.h  vk_wsi.h
